# Small-GEMM

./: CMakeLists.txt  LICENSE  README.md  main.cpp  matmul.cpp  matmul.h  test.cpp  test.py  tests.txt
